--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: Example.com
 description: "Satellite - jekyll blog theme"
 logo_img: "/assets/img/favicon.webp"
-profile_img: "/assets/img/profile.jpg"
+profile_img: "/assets/img/profile.webp"
 
 # Social Links
 email: byanko55@gmail.com
@@ -29,6 +29,7 @@ plugins:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-seo-tag
+  - jekyll-loading-lazy
 
 exclude:
   - docs/
