--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,3 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
 title: example.com
 description: "Satellite - jekyll blog theme"
 logo_img: "/assets/img/favicon.webp"
@@ -24,15 +19,23 @@ giscus_categoryId: "DIC_kwDOLOQWu84Cc9jm"
 goatcounter_code: byanko55
 google_analytics: "G-2XXF0SG31P"
 
+# # # # # # # # # # # # # # # # # # # # # # # # # #
+#                                                 #
+#   Not recommended to touch the materials below  #
+#                                                 #
+#    Any changes may contribute to malfunction    #
+#                                                 #
+# # # # # # # # # # # # # # # # # # # # # # # # # #
+
 # Build settings
-plugins:
-  - jekyll-feed
-  - jekyll-sitemap
-  - jekyll-seo-tag
-  - jekyll-loading-lazy
+
+# If you want to deploy Git Page, but choosing the second Installation method (described in README.md)
+# rather than fork, then replace the below line with `remote_theme: byanko55/jekyll-theme-satellite`.
+# Otherwise, DO NOT change it.
+theme: jekyll-theme-satellite
 
 exclude:
-  - docs/
+  - _posts
 
 collections:
   pages:
