--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,9 @@ google_analytics: "G-2XXF0SG31P"
 # If you want to deploy Git Page, but choosing the second Installation method (described in README.md)
 # rather than fork, then replace the below line with `remote_theme: byanko55/jekyll-theme-satellite`.
 # Otherwise, DO NOT change it.
-theme: jekyll-theme-satellite
+
+# Build settings
+remote_theme: byanko55/jekyll-theme-satellite
 
 exclude:
   - _posts
